--- a/index.css
+++ b/index.css
@@ -1,3 +1,17 @@
-#root{
-    color: brown;
-}
+ .header{
+ display: flex;
+ justify-content: space-between;
+ border: 1px solid black;
+ }
+.img{
+    width:120px;
+ }
+ .nav-items>ul{
+    display: flex;
+    padding:0px 20px;
+    list-style-type: none;
+ }
+ .nav-items>ul>li{
+    padding: 10px;
+ }
+ 
