--- a/index.css
+++ b/index.css
@@ -21,8 +21,12 @@
  /* body css */
 .card-img{
     padding:4px;
-    width: 190px;;
-    height:110px;
+    width: 190px;
+    height:120px;
+     
+}
+.card>h2{
+    margin-top: 5px;
 }
  .search{
     padding:10px;
@@ -31,12 +35,14 @@
  border: 1px solid black;
  height:600px;
  padding:20px;
+ display: flex;
+ flex-wrap: wrap;
  }
  .card{
-    height:250px;
+    height:260px;
     width:200px;
     border:1px solid black;
-    margin:2px;
+    margin:7px;
     padding-left: 5px;
     padding-bottom: 4px;
     background-color: rgb(209, 202, 202);
@@ -44,5 +50,9 @@
  .card:hover{
     cursor: pointer;
     border: 2px solid black;
+ }
+ 
+ .eee{
+    display: flex;
  }
  
