--- a/index.css
+++ b/index.css
@@ -55,4 +55,13 @@
  .eee{
     display: flex;
  }
- 
+ .btn{
+    width: 115.2px;
+    height: 35.2px;
+    margin-top: 10px;
+    padding-top: 1px;
+    margin-bottom: 10px;
+ }
+ .btn:hover{
+    cursor: pointer;
+ }
