--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
- .header{
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+ 
+ /* .header{
  display: flex;
  justify-content: space-between;
  border: 1px solid black;
@@ -23,7 +27,7 @@
  }
  
  /* body css */
-.card-img{
+/* .card-img{
     padding:4px;
     width: 190px;
     height:120px;
@@ -60,8 +64,8 @@
  .eee{
     display: grid;
     grid-template-columns: repeat(6, 1fr); /* Adjust the number as needed */
-    gap: 10px; /* Adjust as needed */
-  }
+   /* gap: 10px; /* Adjust as needed */
+ /* }
  .btn{
     width: 115.2px;
     height: 35.2px;
@@ -115,4 +119,4 @@
 }
 .search-btn{
     margin-left: 10px;
-}
+}*/
